# lib-math-cpp

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt
src/math/: CMakeLists.txt  Common.hpp  Common.test.cpp  Quaternion.hpp  Quaternion.test.cpp  Vector2.hpp  Vector2.test.cpp  Vector3.hpp  Vector3.test.cpp
